objects/OpportunityProcess__c.object
<CustomObject>
    <fields>
        <fullName>FAB__c</fullName>
        <label>FAB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Family__c</fullName>
        <label>Process Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <label>Process ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OpportunityProcess</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>Process_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fab_10_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 10</value>
        </filters>
        <label>Fab 10 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_1_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 1</value>
        </filters>
        <label>Fab 1 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_2_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 2</value>
        </filters>
        <label>Fab 2 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_3E_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 3E</value>
        </filters>
        <label>Fab 3E Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_3_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 3</value>
        </filters>
        <label>Fab 3 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_5_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 5</value>
        </filters>
        <label>Fab 5 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_6_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 6</value>
        </filters>
        <label>Fab 6 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_7_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 7</value>
        </filters>
        <label>Fab 7 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_8_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 8</value>
        </filters>
        <label>Fab 8 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_9_Process</fullName>
        <columns>NAME</columns>
        <columns>Process_ID__c</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 9</value>
        </filters>
        <label>Fab 9 Process</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X22_nm</fullName>
        <columns>NAME</columns>
        <columns>FAB__c</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Family__c</columns>
        <columns>Process_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geometry__c</field>
            <operation>contains</operation>
            <value>18</value>
        </filters>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>FAB 3</value>
        </filters>
        <label>22 nm</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>OpportunityProcess Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityProcess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>